--- a/biodata.html
+++ b/biodata.html
@@ -5,31 +5,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BIODATA NUR SYAZWANI IBRAHIM</title>
 
-<style>
-	body
-	{
-		background-color: whitesmoke;
+	<style>
+		#horizontal-line
+		{
+			width: 1350px;
+			height: 1.2px;
+			background-color: black;
+		}	
+		body
+		{
+		background-color: beige;
 		text-align: center;
-	}
-	h1
-	{
+		}
+		h1
+		{
 		text-align: center;
 		color: black;
 		font-family: serif;
-		font-size: 30px;
-	}
-	p
-	{
+		font-size: 27px;
+		}
+		p
+		{
 		color: black;
 		font-family: serif;
-		font-size: 20px;
+		font-size: 25px;
 	}
 	button
 	{
-		font-size: 20px;
+		font-size: 23px;
 		font-family: serif;
 		border: none;
-		background-color: lightblue;
+		background-color: navajowhite;
 		padding: 17px 34px;
 	}
 	button:hover
@@ -38,8 +44,13 @@
 	}
 	button:active
 	{
-		background-color: skyblue;
+		background-color: antiquewhite;
 	}	
+	}
+		ul,li
+		{
+			text-align: justify;
+		}
 </style>
 
 	<button onclick="document.location='index.html'">HOMEPAGE</button>
@@ -47,6 +58,15 @@
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='experience.html'">EXPERIENCE</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>
+
+	<div align="center" style="font-family: serif;">
+	<p> BIODATA </p>
+
+
+	<p></p><div id="horizontal-line"></div>
+
+	<p style="font-size: 17px;" style="font-family: serif;"> "Self love is the most important component in blooming"</p>
 
 	<br>
 
@@ -54,10 +74,11 @@
 
 	<h2>NUR SYAZWANI IBRAHIM</h2>
 
+	<p><b>Nickname:</b> Wani/Syaz</p>
 	<p><b>Date of birth:</b> 12 September 2002</p>
 	<p><b>Place of birth:</b> Hospital Universiti Sains Malaysia, Kubang Kerian Kelantan</p>
 	<p><b>Ambition:</b> Newsreader</p>
-	<p><b>Hobby:</b> Sleep</p>
+	<p><b>Hobby:</b> Baking</p>
 	<p><b>Favourite food: </b> Macaroni cheese</p>
 	<p><b>Favourite color:</b> White</p>
 
