--- a/contactme.html
+++ b/contactme.html
@@ -65,40 +65,25 @@
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
 
-	<div align="center" style="font-family: serif;">
-	<p> EDUCATION </p>
+	<div align="center" style="font-family: Century Gothic;">
+	<p> CONTACT ME</p>
 
 	<p></p><div id="horizontal-line"></div>
 
-	<p style="font-size: 17px;" style="font-family: serif;"> "A good education is a foundation for a better future"</p>
+	<div align="center" style=" letter-spacing: 5px;">
+	<p style="font-size: 17px;"> <b> GET TO KNOW <br> more about me </b></p>
+	</div>
 
-	<table style="width 70%; text-align: center; margin: auto;">
-		<th>LOGO</th>
-		<th>NAME</th>
-		<th>ACHIEVEMENTS</th>
+	<h2> -------------- </h2>
 
-	<tr>
-		<td><img src="image/tadika.png" width="65px" height="65px"></td>
-		<td>PASTI Al-Ehsan</td>
-	</tr>
-	<tr>
-		<td><img src="image/sktj.jpg" width="65px" height="65px" ></td>
-		<td>SK Taming Jaya</td>
-		<td>UPSR: 3A 2B</td>
-	</tr>
-	<tr>
-		<td><img src="image/smkcj.jpg" width="65px" height="65px"></td>	
-		<td>SMK Cheras Jaya</td>
-		<td>SPM: 4A 2B 2C</td>
+	<p style=" font-size: 17px;"> Any inquiries, contact me at </p>
 
-	</tr>
-	<tr>
-		<td><img src="image/uitm.png" width="65px" height="65px"></td>
-		<td>UiTM Machang</td>
-		<td>CGPA: 3.83</td>
-	</tr>
+	<a href="https://wa.me/60193960438/" target="_blank"><img src="image/whatsapp.png" alt="Whatsapp icon" style="width: 150px; height: 125px"></a>
+	<a href="https://www.instagram.com/syzwni.ibrhim/"><img src="image/instagram.png" alt="Instagram icon" style="width: 150px; height:125px"></a>
 
-	</table>		
+	<p> Thank you for visiting my website. Hope you enjoy it. </p>
 
 </body>
 </html>
+
+
