--- a/experience.html
+++ b/experience.html
@@ -3,43 +3,49 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>BIODATA NUR SYAZWANI IBRAHIM</title>
+	<title>EXPERIENCE NUR SYAZWANI IBRAHIM</title>
 
-<style>
-	body
-	{
-		background-color: burlywood;
-		text-align: center;
-	}
-	h1
-	{
-		text-align: center;
-		color: black;
-		font-family: serif;
-		font-size: 30px;
-	}
-	p
-	{
-		color: black;
-		font-family: serif;
-		font-size: 25px;
-	}
-	button
-	{
-		font-size: 20px;
-		font-family: serif;
-		border: none;
-		background-color: lightblue;
-		padding: 17px 34px;
-	}
-	button:hover
-	{
-		background-color: whitesmoke;
-	}
-	button:active
-	{
-		background-color: skyblue;
-	}	
+	<style>
+		#horizontal-line
+		{
+			width: 1350px;
+			height: 1.2px;
+			background-color: black;
+		}
+		body
+		{
+			background-color: beige;
+			text-align: center;
+		}
+		h1
+		{
+			text-align: center;
+			color: black;
+			font-family: serif;
+			font-size: 27px;
+		}
+		p
+		{
+			color: black;
+			font-family: serif;
+			font-size: 25px;
+		}
+		button
+		{
+			font-size: 23px;
+			font-family: serif;
+			border: none;
+			background-color: navajowhite;
+			padding: 17px 34px;
+		}
+		button:hover
+		{
+			background-color: whitesmoke;
+		}
+		button:active
+		{
+			background-color: antiquewhite;
+		}	
 </style>
 
 	<button onclick="document.location='index.html'">HOMEPAGE</button>
@@ -47,6 +53,34 @@
 	<button onclick="document.location='education.html'">EDUCATION</button>
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>
+
+	<div align="center" style="font-family: serif;">
+	<p> EXPERIENCE </p>	
+
+	<p></p><div id="horizontal-line"></div>
+
+	<p style="font-size: 17px;" style="font-family: serif;"> "Every experience makes you grow" </p>
+
+	<img src="image/komander.jpg" width="500px">
+	<h2>JAWATANKUASA PERWAKILAN KOMANDER KESATRIA (JPKK)</h2>
+
+	<p>JPKK is one of the uniformed body units found at UiTM Machang. I became a commander since I was in the 3rd semester. There are many advantages to being a commander such as college facilities, allowances and learning a lot of new knowledge. In this organization, I hold the position of Exco for Corporate Relations and Protocol. For me, it's not easy to be a commander because I have to be serious and can't smile while doing my job. However, I enjoy being a commander</p>
+
+	<br>
+
+	<img src="image/ais.jpg" width="500px">
+	<h2>ASSOCIATION OF INFORMATION SCIENTISTS (AIS)</h2>
+
+	<p>AIS is an academic association under the Diploma in Information Management Faculty. In this association, I hold the position of President. I have learned many things after joining this association such as leadership skills, how to make programs and how to communicate. Through this association as well, I have managed to close my relationship with fellow faculty members and also the lecturers. There were many challenges during my time as President, but all of them were a learning process.</p>
+
+	<br>
+
+	<img src="image/sukarelawan.jpg" width="500px">
+	<h2>SUKARELAWAN PASCA BANJIR UiTMCK</h2>
+
+	<p>This volunteer mission took place from December 18, 2022 until December 31, 2022. This mission was participated by the Student Representative Council, Commanders, College Representative Committee and ordinary students. All volunteers have been deployed to affected areas around the states of Kelantan and Terengganu. This mission is quite tiring because the condition of the affected house is very bad. However, the cooperation between all the volunteers has made a lot of work easier.</p>
+
 
 </body>
 </html>
