--- a/family.html
+++ b/family.html
@@ -5,41 +5,47 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BIODATA NUR SYAZWANI IBRAHIM</title>
 
-<style>
-	body
-	{
-		background-color: burlywood;
-		text-align: center;
-	}
-	h1
-	{
-		text-align: center;
-		color: black;
-		font-family: serif;
-		font-size: 30px;
-	}
-	p
-	{
-		color: black;
-		font-family: serif;
-		font-size: 25px;
-	}
-	button
-	{
-		font-size: 20px;
-		font-family: serif;
-		border: none;
-		background-color: lightblue;
-		padding: 17px 34px;
-	}
-	button:hover
-	{
-		background-color: whitesmoke;
-	}
-	button:active
-	{
-		background-color: skyblue;
-	}	
+	<style>
+		#horizontal-line
+		{
+			width: 1350px;
+			height: 1.2px;
+			background-color: black;
+		}
+		body
+		{
+			background-color: beige;
+			text-align: center;
+		}
+		h1
+		{
+			text-align: center;
+			color: black;
+			font-family: serif;
+			font-size: 27px;
+		}
+		p
+		{
+			color: black;
+			font-family: serif;
+			font-size: 25px;
+		}
+		button
+		{
+			font-size: 23px;
+			font-family: serif;
+			border: none;
+			background-color: navajowhite;
+			padding: 17px 34px;
+		}
+		button:hover
+		{
+			background-color: whitesmoke;
+		}
+		button:active
+		{
+			background-color: antiquewhite;
+		}	
 </style>
 
 	<button onclick="document.location='index.html'">HOMEPAGE</button>
@@ -47,6 +53,52 @@
 	<button onclick="document.location='education.html'">EDUCATION</button>
 	<button onclick="document.location='experience.html'">EXPERIENCE</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>
+
+	<div align="center" style="font-family: serif;">
+	<p> FAMILY </p>	
+
+	<p></p><div id="horizontal-line"></div>
+
+	<p style="font-size: 17px;" style="font-family: serif;"> "The love of a family is a life's greatest blessing" </p>
+
+	<img src="image/family.jpg" width="500px">
+	<h2>My Family</h2>
+
+	<img src="image/abah.jpg" width="250px">
+
+	<h2>IBRAHIM BIN ISMAIL</h2>
+
+	<p><b>Age:</b> 51 years old</p>
+	<p><b>Occupation:</b> Executive</p>
+
+	<img src="image/mama.jpg" width="250px">
+
+	<h2>MARINA BINTI DOLLAH</h2>
+
+	<p><b>Age:</b> 52 years old</p>
+	<p><b>Occupation:</b> Housewife</p>
+
+	<img src="image/along.jpg" width="250px">
+
+	<h2>NUR ZAHIDAH BINTI IBRAHIM</h2>
+
+	<p><b>Age:</b> 26 years old</p>
+	<p><b>Occupation:</b> Event Planner</p>
+
+	<img src="image/angahh.jpg" width="250px">
+
+	<h2>NUR ZAHIRAH BINTI IBRAHIM</h2>
+
+	<p><b>Age:</b> 24 years old</p>
+	<p><b>Occupation:</b> Tution Teacher</p>
+
+	<img src="image/adik.jpg" width="250px">
+
+	<h2>NUR SYAFIQAH BINTI IBRAHIM</h2>
+
+	<p><b>Age:</b> 17 years old</p>
+	<p><b>Occupation:</b> Student</p>
 
 </body>
 </html>
