--- a/gallery.html
+++ b/gallery.html
@@ -5,41 +5,47 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BIODATA NUR SYAZWANI IBRAHIM</title>
 
-<style>
+	<style>
+		#horizontal-line
+		{
+			width: 1350px;
+			height: 1.2px;
+			background-color: black;
+		}
 	body
-	{
-		background-color: burlywood;
-		text-align: center;
-	}
-	h1
-	{
-		text-align: center;
-		color: black;
-		font-family: serif;
-		font-size: 30px;
-	}
-	p
-	{
-		color: black;
-		font-family: serif;
-		font-size: 25px;
-	}
-	button
-	{
-		font-size: 20px;
-		font-family: serif;
-		border: none;
-		background-color: lightblue;
-		padding: 17px 34px;
-	}
-	button:hover
-	{
-		background-color: whitesmoke;
-	}
-	button:active
-	{
-		background-color: skyblue;
-	}	
+		{
+			background-color: beige;
+			text-align: center;
+		}
+		h1
+		{
+			text-align: center;
+			color: black;
+			font-family: serif;
+			font-size: 27px;
+		}
+		p
+		{
+			color: black;
+			font-family: serif;
+			font-size: 25px;
+		}
+		button
+		{
+			font-size: 23px;
+			font-family: serif;
+			border: none;
+			background-color: navajowhite;
+			padding: 17px 34px;
+		}
+		button:hover
+		{
+			background-color: whitesmoke;
+		}
+		button:active
+		{
+			background-color: antiquewhite;
+		}	
 </style>
 
 	<button onclick="document.location='index.html'">HOMEPAGE</button>
@@ -47,6 +53,24 @@
 	<button onclick="document.location='education.html'">EDUCATION</button>
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='experience.html'">EXPERIENCE</button>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>
+
+	<div align="center" style="font-family: serif;">
+	<p>GALLERY</p>
+
+	<p></p><div id="horizontal-line"></div>
+	
+	<p style="font-size: 17px;" style="font-family: serif;"> "A picture is worth a thousand words, but a memory is priceless" </p>
+
+	<img src="image/gallery1.jpg" width="350px">
+	<img src="image/gallery2.jpg" width="350px">
+	<img src="image/gallery3.jpg" width="350px">
+	<img src="image/gallery4.jpg" width="350px">
+	<img src="image/gallery5.jpg" width="350px">
+	<img src="image/gallery6.jpg" width="350px">
+	<img src="image/gallery7.jpg" width="350px">
+	<img src="image/gallery8.jpg" width="350px">
+	<img src="image/gallery9.jpg" width="350px">
 
 </body>
 </html>
