--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <style>
 	body
 	{
-		background-image: url(image/beach2.jpg); background-size: 100%;
+		background-image: url(image/bg3.jpg); background-size: 100%;	
+		text-align: center;
 	}
+
 	h1
 		{
 			text-align: center;
 			color: black;
 			font-family: serif;
-			font-size: 30px;
+			font-size: 27px;
 		}
 	p
 		{
@@ -26,19 +28,19 @@
 		}
 	button
 		{
-			font-size: 20px;
+			font-size: 23px;
 			font-family: serif;
 			border: none;
-			background-color: lightblue;
+			background-color: aliceblue;
 			padding: 17px 34px;
 		}
 	button:hover
 		{
-			background-color: skyblue;
+			background-color: floralwhite;
 		}
 	button:active
 		{
-			background-color: skyblue;
+			background-color: navajowhite;
 
 		}	
 
@@ -55,9 +57,7 @@
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='experience.html'">EXPERIENCE</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
-
-<li style="float: right; font-size: 25px; text-align: center; "><b>NUR SYAZWANI IBRAHIM</b></li>		 
-	</ul>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>		 
 
 	<br>
 	<br>
@@ -65,12 +65,9 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+	
+	<h2 style="border:2px brown; color: black; text-align: center; border: solid;">HELLO! WELCOME TO SYAZWANI IBRAHIM WEBSITE</h2>
 
-	<h2 style="border:2px brown; color: black; text-align: center;">HELLO! WELCOME TO SYAZWANI IBRAHIM WEBSITE</h2>
 
 
 
