--- a/education.html
+++ b/education.html
@@ -64,6 +64,7 @@
 	<button onclick="document.location='experience.html'">EXPERIENCE</button>
 	<button onclick="document.location='family.html'">FAMILY</button>
 	<button onclick="document.location='gallery.html'">GALLERY</button>
+	<button onclick="document.location='contactme.html'">CONTACT ME</button>
 
 	<div align="center" style="font-family: serif;">
 	<p> EDUCATION </p>
